Evaluating Expressions Working Partially But Doesn't Go To End